# remote_camera_tizen_framework

./: AUTHORS  CMakeLists.txt  build_tizen_platform.sh  remote-key-framework.manifest  rkfsvc
include/: remote-key-framework.h
packaging/: app-prefetcher.service  app-prefetcher.spec  remote-key-framework.service  remote-key-framework.spec  remote_camera.service  remote_camera.spec
server/: CMakeLists.txt
server/include/: common.h
server/src/: common.cpp  main.cpp
src/: CMakeLists.txt  tags
src/include/: common.h  prefetcher.h
src/src/: .main.cpp.swo  common.cpp  main.cpp  main.cpp~  main_1.cpp
